istio-deloyment/external-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: minikube-mongo-host
  namespace: shoppingportal
spec:
  type: ExternalName
  externalName: 192.168.2.4
