istio-deloyment/infra-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: infra-gateway
  namespace: shoppingportal  
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 15031
      name: infra-port
      protocol: HTTP
    hosts:
     - "*"
